# UFJF-DCC-TCC

./: .gitignore  Makefile  README.md  pyproject.toml
execucao_orcamentaria/: definitions.py
execucao_orcamentaria/defs/dbt/: assets.py  resources.py
execucao_orcamentaria/defs/duckdb/: resources.py
execucao_orcamentaria/defs/filesystem/: resources.py
execucao_orcamentaria/defs/pjf/: partitions.py
execucao_orcamentaria/defs/pjf/assets/: despesas.py  receitas.py
execucao_orcamentaria/utils/: duckdb.py
execucao_orcamentaria_dbt/: dbt_project.yml  profiles.yml
execucao_orcamentaria_dbt/models/staging/pjf/: _sources.yml  stg_pjf_despesa_mensal_consolidada.sql  stg_pjf_receita_mensal_comparativa.sql  stg_pjf_receita_mensal_prevista.sql
references/: PJF.md  dagster.md
