[project]
name = "ufjf-tcc"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.11.7",
    "dagster-dg-cli>=1.11.7",
    "dagster-duckdb>=0.27.7",
    "dagster-webserver>=1.11.7",
    "duckdb>=1.3.2",
    "ipykernel[dev]>=6.30.1",
    "pandas>=2.3.2",
    "pip[dev]>=25.2",
    "requests>=2.32.5",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = ["ruff>=0.12.10", "sqlfluff>=3.4.2"]

# Dagster
[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "execucao_orcamentaria"
registry_modules = ["execucao_orcamentaria.lib.*"]

# Ruff

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "A", "I", "B", "PL", "ERA"]
